--- a/movies-watchlist/src/Components/index.css
+++ b/movies-watchlist/src/Components/index.css
@@ -37,7 +37,6 @@ a {
   text-decoration: none;
 }
 
-
 .nav-links {
   height: 80px;
   width: 100%;
@@ -112,8 +111,8 @@ a {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  margin: 15px;
 }
-
 
 .results {
   display: flex;
@@ -123,6 +122,16 @@ a {
   margin-top: 95px;
 }
 
+.result-card .poster-wrapper img,
+.filler-poster {
+  width: 255px;
+  height: 355px;
+  background-color: #dbdada;
+  border-radius: 5px;
+  margin-right: 15px;
+  display: block;
+  color: transparent;
+}
 
 .results .result {
   display: flex;
@@ -159,18 +168,39 @@ a {
   color: #ac85c2;
 }
 
+.results .filler-poster {
+  height: 355px;
+  background-color: #bcafc3;
+}
+
 ul li {
   list-style-type: none;
 }
 
 .btn {
-  margin: 5px 46% 25px;
-  padding: 2px;
-  background-color: #ad93bd;
+  border-radius: 6px;
+  font-size: 15px;
+  margin: 5px 43% 25px;
+  outline: none;
+  padding: 4px;
+  background-color: #bcafc3;
   text-align: center; 
 }
 
 .add-content {
  display: inline-flex;
- width: 140%;
+}
+
+.title {
+  max-width: 250px;
+  text-overflow: ellipsis;
+  color: #b59fc2;
+  margin-left: 2px;
+  margin-top: 4px;
+}
+
+.release-date {
+  color: #ad90be;
+  margin-left: 2px;
+  margin-top: 2px;
 }
